<?xml version="1.0"?>
<package format="2">
  <name>ackermann_utilities</name>
  <version>0.0.1</version>
  <description>The ackerman_utilities package</description>
  <maintainer email="chris@cthierauf.com">cst0</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
