<?xml version="1.0"?>
<package>
  <name>tractor_vehicle_description</name>
  <version>0.0.1</version>
  <description>
    This package contains the URDF description of the Tractor vehicle.
  </description>
  <maintainer email="chris@cthierauf.com">cst0</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>xacro</run_depend>
</package>
